--- a/HiChongSwift/Square.storyboard
+++ b/HiChongSwift/Square.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C99d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lFc-P1-d4G">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C106a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lFc-P1-d4G">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -386,6 +386,7 @@
                                         <connections>
                                             <outlet property="detailLabel" destination="CL7-80-BPx" id="P6r-L3-cKJ"/>
                                             <outlet property="distanceLabel" destination="HHS-PU-6TA" id="vqH-9E-2gc"/>
+                                            <outlet property="icyImageView" destination="rAu-G2-rXm" id="hbt-Wl-Equ"/>
                                             <outlet property="nameLabel" destination="7cA-w6-Ot7" id="1yp-kM-3OX"/>
                                             <outletCollection property="heartImageView" destination="Ljt-xu-EsP" collectionClass="NSMutableArray" id="HYp-MQ-Sr3"/>
                                             <outletCollection property="heartImageView" destination="ZhJ-iF-Q0W" collectionClass="NSMutableArray" id="t6O-4l-cVd"/>
