--- a/HiChongSwift/Find.storyboard
+++ b/HiChongSwift/Find.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C106a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gp1-oJ-59R">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D72i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gp1-oJ-59R">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -1746,14 +1746,33 @@ So as I pray, Unlimited Blade Works.</string>
                                     <outlet property="sepratorImageView" destination="0D2-od-UYV" id="8e6-Fz-3US"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindTwitterCommentListCellIdentifier" id="Lmp-zF-Bnf" customClass="FindTwitterCommentListCell" customModule="HiChongSwift" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindTwitterCommentListCellIdentifier" rowHeight="67" id="Lmp-zF-Bnf" customClass="FindTwitterCommentListCell" customModule="HiChongSwift" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lmp-zF-Bnf" id="oih-px-Nka">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u8g-7v-e07">
+                                            <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="a4J-TH-VbN"/>
+                                                <constraint firstAttribute="height" constant="50" id="hN0-cp-nUh"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="25"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gtl-Li-P3y">
+                                            <rect key="frame" x="66" y="8" width="38" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.34509804844856262" green="0.61960786581039429" blue="0.7450980544090271" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhm-ZE-3bx">
-                                            <rect key="frame" x="8" y="8" width="584" height="15"/>
+                                            <rect key="frame" x="64" y="32" width="528" height="17"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Label">
                                                     <attributes>
@@ -1765,15 +1784,30 @@ So as I pray, Unlimited Blade Works.</string>
                                             </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-sc-TlN">
+                                            <rect key="frame" x="559" y="8" width="33" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="uhm-ZE-3bx" secondAttribute="trailing" constant="8" id="1nF-og-ANM"/>
-                                        <constraint firstItem="uhm-ZE-3bx" firstAttribute="leading" secondItem="oih-px-Nka" secondAttribute="leading" constant="8" id="FMc-N9-LTT"/>
-                                        <constraint firstItem="uhm-ZE-3bx" firstAttribute="top" secondItem="oih-px-Nka" secondAttribute="top" constant="6" id="Jra-b9-Qix"/>
+                                        <constraint firstItem="u8g-7v-e07" firstAttribute="top" secondItem="oih-px-Nka" secondAttribute="top" constant="8" id="85n-pu-RdC"/>
+                                        <constraint firstItem="uhm-ZE-3bx" firstAttribute="leading" secondItem="oih-px-Nka" secondAttribute="leading" constant="64" id="FMc-N9-LTT"/>
+                                        <constraint firstAttribute="trailing" secondItem="Oqd-sc-TlN" secondAttribute="trailing" constant="8" id="G9t-9k-kjH"/>
+                                        <constraint firstItem="u8g-7v-e07" firstAttribute="leading" secondItem="oih-px-Nka" secondAttribute="leading" constant="8" id="J27-qB-Z5O"/>
+                                        <constraint firstItem="Gtl-Li-P3y" firstAttribute="leading" secondItem="u8g-7v-e07" secondAttribute="trailing" constant="8" id="W4V-10-Gcs"/>
+                                        <constraint firstAttribute="bottom" secondItem="uhm-ZE-3bx" secondAttribute="bottom" constant="8" id="awu-j2-5Zw"/>
+                                        <constraint firstItem="Gtl-Li-P3y" firstAttribute="top" secondItem="oih-px-Nka" secondAttribute="top" constant="8" id="dBb-AM-Dto"/>
+                                        <constraint firstItem="Oqd-sc-TlN" firstAttribute="top" secondItem="oih-px-Nka" secondAttribute="top" constant="8" id="hM1-1F-ZEa"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="icyImageView" destination="u8g-7v-e07" id="5FK-8I-WnY"/>
                                     <outlet property="icyLabel" destination="uhm-ZE-3bx" id="fDQ-22-tds"/>
+                                    <outlet property="icyNameLabel" destination="Gtl-Li-P3y" id="RJQ-gn-Riu"/>
+                                    <outlet property="icyTimeLabel" destination="Oqd-sc-TlN" id="3gI-aY-x3p"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
